Fix the background

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,11 +10,11 @@ const { frontmatter } = Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/sako/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{frontmatter.title}</title>
   </head>
-  <body class="bg-[url('/sako/retro.jpg')] bg-fixed">
+  <body class="bg-[url('/sako/retro.jpg')] bg-fixed bg-cover bg-center">
     <main class="mx-auto max-w-7xl p-1 md:p-8">
       <div class="p-4 md:p-8 bg-white/70 rounded-md backdrop-blur-md">
         <h1 class="drop-shadow-lg font-semibold text-slate-900 text-2xl">
