--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,5 +33,5 @@ const { frontmatter } = Astro.props;
 </html>
 
 <style is:global>
-  @import url('https://fonts.googleapis.com/css2?family=Josefin%20Sans:wght@400&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Fira%20Code:wght@400&display=swap');
 </style>
